# mlops-72

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  data.dvc  models.dvc  modelserve.yaml  my_history.txt  pipeline-submit.py  pipeline.json  prometheus.yml  pyproject.toml  tasks.py  testfile.txt.dvc  train.dockerfile
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: data_change.yaml  model_change.yaml  tests.yaml
cloudbuild/: cloudbuild_datadrift.yaml  cloudbuild_model.yaml  cloudbuild_train.yaml
configs/: config.yaml
configs/gcp/: gcp.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/outputs/: outputs.yaml
configs/pca/: pca.yaml
dockerfiles/: api.dockerfile  datadrift.dockerfile  modelserve.dockerfile  system-monitor.dockerfile  train.dockerfile  train_monitoring.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
pipelines/: training_pipeline.py
reports/: README.md  report.html
src/olivetti_faces/: data.py  datadrift.py  model.py  secrets_utils.py  system_monitoring.py  train.py
src/olivetti_faces/data/: processed.dvc
src/olivetti_faces/models/: svm.pkl
src/olivetti_faces/wandb/: latest-run
tests/: test_data.py  test_model.py  test_train.py
wandb/: latest-run
wandb/run-20260119_220128-wouhza3n/: run-wouhza3n.wandb
wandb/run-20260119_220128-wouhza3n/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260119_223744-83kurjyg/: run-83kurjyg.wandb
wandb/run-20260119_223744-83kurjyg/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260120_235202-4uo6lvg3/: run-4uo6lvg3.wandb
wandb/run-20260120_235202-4uo6lvg3/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
workspace/019bdd87-45f1-7139-8064-7a4268ec8675/: dashboard.json  metadata.json
workspace/019bdd87-45f1-7139-8064-7a4268ec8675/snapshots/: 019bdd87-63d0-7224-b48e-b28f3b26cc40.json  019bdd87-63d0-7224-b48e-b28f3b26cc40.links.json  019bdd87-6700-741e-9994-fe239cb5c475.json  019bdd87-6700-741e-9994-fe239cb5c475.links.json  019bdd87-6a8c-7556-b5f8-7a737fe52b2b.json  019bdd87-6a8c-7556-b5f8-7a737fe52b2b.links.json  019bdd87-6dbe-7dc1-b332-a51749004c3e.json  019bdd87-6dbe-7dc1-b332-a51749004c3e.links.json  019bdd87-70da-7b9e-8a88-03fe2ec343ae.json  019bdd87-70da-7b9e-8a88-03fe2ec343ae.links.json  019bdd87-74fa-7673-9731-b824948a4a2a.json  019bdd87-74fa-7673-9731-b824948a4a2a.links.json  019bdd87-7848-76f7-b008-4ff80c0c4344.json  019bdd87-7848-76f7-b008-4ff80c0c4344.links.json  019bdd87-7b96-7dc6-9db1-19fb2a4e1c12.json  019bdd87-7b96-7dc6-9db1-19fb2a4e1c12.links.json  019bdd87-7f3f-77d9-8356-3a02c95d5c69.json  019bdd87-7f3f-77d9-8356-3a02c95d5c69.links.json  019bdd87-829d-71b2-b380-54d91e2ee655.json  019bdd87-829d-71b2-b380-54d91e2ee655.links.json  019bdd87-88a9-73fa-83f5-16bb604b1cfa.json  019bdd87-88a9-73fa-83f5-16bb604b1cfa.links.json  019bdd87-8d0a-7d7b-991a-4a714fd6fd84.json  019bdd87-8d0a-7d7b-991a-4a714fd6fd84.links.json  019bdd87-903c-7309-9bbb-da54b27ab2b8.json  019bdd87-903c-7309-9bbb-da54b27ab2b8.links.json  019bdd87-93e2-7003-96dd-5593abbddcdd.json  019bdd87-93e2-7003-96dd-5593abbddcdd.links.json  (+28 more)
workspace/019bdd87-c87e-78da-9cf8-f4489a0089bb/: dashboard.json  metadata.json
(+197 files in other folders)
